			       =================
				BOGOFILTER NEWS
			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	The sections

        INCOMPATIBLE CHANGES IN BOGOFILTER (version)
and     MAJOR CHANGES IN BOGOFILTER (version)

	are particularly important.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-04-03

	* File handling code rewritten to use bfpath structure for
          holding all info and with a 3 step use of the info.  1 -
          create bfpaths during command line and config file
          processing; 2 - validate directories and file names; and 3 -
          use files for processing.

0.94.3	2005-03-29

	2005-03-27

	* Added FAQ info on using bogofilter with mutt and sylpheed claws.

	* Fixed --db-print-pagesize so that the proper directory is
	  used for database environment.

	2005-03-25

	* Add error checking to bogoutil's ROBX calculation.

	* Allow --db-verify to work for non-transactional databases.

	* Repair several minor defects around --db-print-pagesize.  Support
	  page size detection with Berkeley DB 3.1 and 3.2 (it was already
	  supported for 3.3 - 4.3). Offer --db-print-pagesize function in
	  bogoutil --help when compiled against SQLite3.

	* Add more intensive bogoutil inspection to the test suite.

	* Fix incomplete cleanups that broke several bogoutil functions again,
	  among them --db-recover[-harder], --db-remove-environment,
	  --db-verify and --db-print-pagesize.

	* Let SQLite3 retry when the database is busy (rather than locked).

0.94.2	2005-03-24

	* Fix SQLite3 open problem, trying again when the table it is
          locked.

	2005-03-23

	* Fix --enable-iconv breaking with non-ASCII default charset.

	* bogolexer now understands the --charset-default options.

	2005-03-22

	* Fix SQLite3 regression in 0.94.0 that broke consistency guarantees
	  and caused a _massive_ slowdown.
